--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -124,7 +124,7 @@
 	
 	&__item {
 	  display: grid;
-	  grid-template-columns: 1fr 3fr 1fr;
+	  grid-template-columns: 1fr 4fr 5fr;
 	  align-items: center;
 	  padding: 10px 30px 10px 10px;
 	  overflow: hidden;
@@ -229,7 +229,7 @@ body {
 			padding-top: 10px;
 			padding-bottom: 10px;
 
-			.text-input {
+			.input-item {
 				width: 300px;
 				margin-top: 5px;
 				margin-bottom: 5px;
@@ -242,7 +242,7 @@ body {
 				margin-top: 5px;
 				margin-bottom: 5px;
 
-				> .text-input {
+				> .input-item {
 					margin-right: 10px;
 					margin-left: 10px;
 				}
