--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -207,7 +207,8 @@
   
 body {
 	margin: 0;
-	background-color: #eaeaea;
+	// background-color: #eaeaea;
+	background-color: #090909;
 	display: grid;
 	height: 100vh;
 	place-items: center;
