--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,8 +1,8 @@
 
 .container{
-	display: flex;
-	flex-wrap: nowrap; 
-	overflow: auto;
+	display: grid;
+	gap: 20px;
+	grid-template-columns: auto auto auto;
 }
 .wallets{
 	.section{
@@ -213,6 +213,9 @@ body {
 	height: 100vh;
 	place-items: center;
 	font-family: 'Source Sans Pro', sans-serif;
+}
+h1 {
+	color: #fff;
 }
 
 .modal {
