--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -111,7 +111,7 @@
 	background-color: #c9c9c9;
 	
 	header {
-	  --start: 15%;
+	  --start: 20%;
 	  
 	  height: 160px;
 	  background-image: repeating-radial-gradient(circle at var(--start), transparent 0%, transparent 10%, rgba(54, 219, 89, .33) 10%, rgba(54, 219, 89, .33) 17%), linear-gradient(to right, #5bfa7c, #36db59);
@@ -176,35 +176,48 @@
 			width: 70%;
 		}
 	  }
-	  .buttons_container{
+	  .buttons_container_left{
+		display: block;
+		position: absolute;
+		width: 60px;
+		height: 100%;
+		margin-right:auto;
+
+		.button_pause {
+			background-color: #f3f4f6;
+			border-radius: 0 0 12px 0;
+			box-shadow: 0 0 40px -10px rgba(0, 0, 0, .4);
+		}
+		.button_buy {
+			background-color: #f3f4f6;
+			border-radius: 0 12px 12px 0;
+			box-shadow: 0 0 40px -10px rgba(0, 0, 0, .4);
+			margin-top: 5px;
+		}
+		.button_sell {
+			background-color: #f3f4f6;
+			border-radius: 0 12px 12px 0;
+			box-shadow: 0 0 40px -10px rgba(0, 0, 0, .4);
+			margin-top: 5px;
+		}
+	  }
+	  .buttons_container_right{
 		display:block;
 		width: 60px;
 		height: 100%;
 		margin-left:auto;
 
-		.button_buy {
-			background-color: #f3f4f6;
-			border-radius: 12px 0 0 12px;
-			box-shadow: 0 0 40px -10px rgba(0, 0, 0, .4);
-			margin-top: 5px;
-		  }
-		  .button_sell {
-			background-color: #f3f4f6;
-			border-radius: 12px 0 0 12px;
-			box-shadow: 0 0 40px -10px rgba(0, 0, 0, .4);
-			margin-top: 5px;
-		  }
-		  .button_copy {
-			background-color: #f3f4f6;
-			border-radius: 12px 0 0 12px;
-			box-shadow: 0 0 40px -10px rgba(0, 0, 0, .4);
-			margin-top: 5px;
-		  }
-		  .button_config {
+		.button_config {
 			background-color: #f3f4f6;
 			border-radius: 0 0 0 12px;
 			box-shadow: 0 0 40px -10px rgba(0, 0, 0, .4);
-		  }
+		}
+		.button_copy {
+		  background-color: #f3f4f6;
+		  border-radius: 12px 0 0 12px;
+		  box-shadow: 0 0 40px -10px rgba(0, 0, 0, .4);
+		  margin-top: 5px;
+		}
 	  }
 	}
 	
